# verified-rag-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  TESTING.md  corpus_urls.txt  main.py  pyproject.toml  test_connection.py
frontend/: package-lock.json
frontend/src/: App.jsx
notebooks/: 01_ingest.ipynb
notebooks/.ipynb_checkpoints/: 01_ingest-checkpoint.ipynb
scripts/: build_index.py
src/app/: config.py  main.py
src/app/rag/: router.py  schemas.py  service.py
tests/: conftest.py  test_ask.py  test_health.py
